samples/_failures_safe/1761475676_60d9c6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2de6bf21.c: In function ‘main’:
./samples/SAFE/__tmp_2de6bf21.c:171:5: error: expected declaration or statement at end of input
  171 |     }
      |     ^
